// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic checkbox field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c5:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c5[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c2 c3 c4"
    >
      <input
        class="c5 c6"
        type="checkbox"
        value=""
      />
      <div
        class="c7 c8 c1"
      />
      <span
        class="c9 c10"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a disabled checkbox field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c5:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c5[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c2 c3 c4"
    >
      <input
        class="c5 c6"
        disabled=""
        type="checkbox"
        value=""
      />
      <div
        class="c7 c8 c1"
      />
      <span
        class="c9 c10"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c13 {
  font-style: italic;
}

kbd.c13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c13 {
  font-weight: bold;
}

sub.c13,
sup.c13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c13,
u.c13 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c13,
cite.c13,
var.c13,
em.c13 {
  font-style: italic;
}

kbd.c13,
pre.c13,
samp.c13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c9[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c9:checked:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9:not([disabled]):checked + .c11 {
  border-color: #7467c0;
}

.c9:checked + .c11::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c9[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c15[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c15:checked:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c15:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c15:not([disabled]):checked + .c11 {
  border-color: #7467c0;
}

.c15:checked + .c11 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c15:checked + .c11::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c15[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="true"
      class="c7 c5 c8"
    >
      <input
        class="c9 c10"
        type="checkbox"
        value=""
      />
      <div
        class="c11 c12 c1"
      />
      <span
        class="c13 c14"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c15 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c11 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c11[disabled] + .c13 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c13 {
  border-color: #7467c0;
}

.c11:checked + .c13::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c11[disabled]:checked + .c13::before {
  border-color: #9a9a9a;
}

.c16[disabled] + .c13 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c16:checked:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:not([disabled]):checked + .c13 {
  border-color: #7467c0;
}

.c16:checked + .c13 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:checked + .c13::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c16[disabled]:checked + .c13::before {
  border-color: #9a9a9a;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <span
      class="c7 c8 c1"
    >
      Required for your fannypack
    </span>
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c9 c5 c10"
    >
      <input
        class="c11 c12"
        type="checkbox"
        value=""
      />
      <div
        class="c13 c14 c1"
      />
      <span
        class="c8 c15"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c13 {
  font-style: italic;
}

kbd.c13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c13 {
  font-weight: bold;
}

sub.c13,
sup.c13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c13,
u.c13 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c13,
cite.c13,
var.c13,
em.c13 {
  font-style: italic;
}

kbd.c13,
pre.c13,
samp.c13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c9[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c9:checked:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9:not([disabled]):checked + .c11 {
  border-color: #7467c0;
}

.c9:checked + .c11::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c9[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c16[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c16:checked:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:focus + .c11 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:not([disabled]):checked + .c11 {
  border-color: #7467c0;
}

.c16:checked + .c11 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:checked + .c11::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c16[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

.c15 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c7 c5 c8"
    >
      <input
        class="c9 c10"
        type="checkbox"
        value=""
      />
      <div
        class="c11 c12 c1"
      />
      <span
        class="c13 c14"
        id="label"
      >
        Check me
      </span>
    </label>
    <span
      class="c15 c13 c1"
    >
      Must be awesome
    </span>
  </div>
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c15 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c11 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c11[disabled] + .c13 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c13 {
  border-color: #7467c0;
}

.c11:checked + .c13::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c11[disabled]:checked + .c13::before {
  border-color: #9a9a9a;
}

.c16[disabled] + .c13 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c16:checked:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:focus + .c13 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:not([disabled]):checked + .c13 {
  border-color: #7467c0;
}

.c16:checked + .c13 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c16:checked + .c13::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c16[disabled]:checked + .c13::before {
  border-color: #9a9a9a;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
      <span
        class="c7 c8 c1"
      >
        OPTIONAL
      </span>
    </div>
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c9 c5 c10"
    >
      <input
        class="c11 c12"
        type="checkbox"
        value=""
      />
      <div
        class="c13 c14 c1"
      />
      <span
        class="c8 c15"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a checkbox field with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c11:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c11[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c5:checked + .c7 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c5[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <label
      aria-describedby="label"
      aria-invalid="true"
      aria-label="Check me"
      aria-required="false"
      class="c2 c3 c4"
    >
      <input
        class="c5 c6"
        type="checkbox"
        value=""
      />
      <div
        class="c7 c8 c1"
      />
      <span
        class="c9 c10"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a checkbox field with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c11:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c11[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c5:checked + .c7 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c5[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c2 c3 c4"
    >
      <input
        class="c5 c6"
        type="checkbox"
        value=""
      />
      <div
        class="c7 c8 c1"
      />
      <span
        class="c9 c10"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a checkbox field with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c11:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c11[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c5:checked + .c7 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c5[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c2 c3 c4"
    >
      <input
        class="c5 c6"
        type="checkbox"
        value=""
      />
      <div
        class="c7 c8 c1"
      />
      <span
        class="c9 c10"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for a checkbox field with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

abbr.c9 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c9 {
  font-style: italic;
}

kbd.c9 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c9 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c9 {
  font-weight: bold;
}

sub.c9,
sup.c9 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c9,
u.c9 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c9,
cite.c9,
var.c9,
em.c9 {
  font-style: italic;
}

kbd.c9,
pre.c9,
samp.c9 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c3 {
  display: inline-block;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c8 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

.c11[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c11:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c11:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c11:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c11[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c5 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c5[disabled] + .c7 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c5:checked:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:focus + .c7 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:not([disabled]):checked + .c7 {
  border-color: #7467c0;
}

.c5:checked + .c7 {
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c5:checked + .c7::before {
  background-clip: padding-box;
  border: 0.1rem solid #7467c0;
  border-left-width: 0;
  border-top-width: 0;
  content: '';
  height: 10px;
  left: 50%;
  margin-left: -3px;
  margin-top: -6px;
  position: absolute;
  top: 50%;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 6px;
}

.c5[disabled]:checked + .c7::before {
  border-color: #9a9a9a;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div />
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-label="Check me"
      aria-required="false"
      class="c2 c3 c4"
    >
      <input
        class="c5 c6"
        type="checkbox"
        value=""
      />
      <div
        class="c7 c8 c1"
      />
      <span
        class="c9 c10"
        id="label"
      >
        Check me
      </span>
    </label>
    <div />
  </div>
</div>
`;
